--- a/css/module/ui/ui.less
+++ b/css/module/ui/ui.less
@@ -13,6 +13,7 @@
 @import url('verif.less');			//认证
 @import url('role.less');			//门派
 @import url('msg.less');			//跳转消息
+@import url('ribbon.less');			//角标
 
 
 .alertHTML .p_pop{
