--- a/css/module/widget/w-custom.less
+++ b/css/module/widget/w-custom.less
@@ -19,6 +19,7 @@
 .w-custom-zoom,.w-custom-feed,.w-custom-my,.w-custom-fav{
 	.fl;margin-left:15px;
 	i{.dbi;.y;.size(16px);}
+	&:hover i{background-position: 0 -16px;}
 }
 .w-custom-zoom{
 	.pointer;
