--- a/css/index/index-v7/layout.less
+++ b/css/index/index-v7/layout.less
@@ -12,27 +12,6 @@
 	.fl;
 	.w(220px);
 }
-
-.m-index-title{
-	.u-title{
-		.db;
-		.color(#444,@blue-link);
-		line-height:36px;
-		padding-left:10px;
-		border-bottom:1px solid #eee;
-	}
-
-	.u-ico{
-	    display: inline-block;
-	    vertical-align: middle;
-	    width: 16px;
-	    height: 16px;
-	    margin-right:3px;
-		background: url('@{url}forum/my.png') no-repeat 0 0;
-    	margin: -2px 5px 0 0;
-	}
-}
-
 #pt{
 	.none;
 }
@@ -41,4 +20,9 @@
 	.fr;
 	a{.color(@blue-link);}
 	a:hover{text-decoration:underline;}
+}
+.u-ribbon-txt(@txt){
+	&:after{
+		content:'@{txt}';
+	}
 }
