--- a/template/yylmacro/portal/portal_topic_test.htm
+++ b/template/yylmacro/portal/portal_topic_test.htm
@@ -20,59 +20,40 @@
             </div>
 
             <div class="m-index-zt">
-                <ul>
-                    <li><a href="">专题名称</a><span>专题描述文字文字</span></li>
-                    <li><a href="">活动名称</a><span>活动描述文字文字</span></li>
-                    <li><a href="">热点搜词</a><span>专题描述文字文字</span></li>
-                    <li><a href="">广告之类</a><span>专题描述文字文字</span></li>
-                </ul>
+                <!--{block/1817}-->
             </div>
+
+            <!--{template jx3pve/c_compass}-->
 
             <div class="m-index-news">
                 <h2 class="m-index-title">
-                    <a class="u-title" href="./news"><i class="u-ico"></i>干货推荐</a>
+                    <a class="u-title on" href="javascript:;"><i class="u-ico"></i>干货推荐<span class="u-divding"> | </span></a>
+                    <a class="u-title" href="javascript:;">PVE动态<span class="u-divding"> | </span></a>
+                    <a class="u-title" href="javascript:;">PVX动态<span class="u-divding"> | </span></a>
+                    <a class="u-title" href="javascript:;">江湖动态</a>
                     <a class="u-add" href="./push"><i></i>推送</a>
                 </h2>
-                <!--{block/1805}-->
+                <div class="m-index-list on">
+                    <!--{block/1805}-->
+                </div>
+                <div class="m-index-list">
+                    <!--{block/1818}-->
+                </div>
+                <div class="m-index-list">
+                    <!--{block/1736}-->
+                </div>
+                <div class="m-index-list">
+                    <!--{block/1737}-->
+                </div>
             </div>
 
-            <div class="c-compass">
-                <ul>
-                    <li><a class="" href="./bbs"><i class="u-bbs"></i><span>交流</span><em></em></a></li>
-                    <li><a class="" href="./macro"><i class="u-macro"></i><span>宏库</span><em class="u-mark-hot"></em></a></li>
-                    <li><a href="./tool"><i class="u-tool"></i><span>工具</span><em></em></a></li>
-                    <li><a href="./role"><i class="u-role"></i><span>职业</span><em></em></a></li>
-                    <li><a href="./fam"><i class="u-fam"></i><span>副本</span><em class="u-mark-hot"></em></a></li>
-                    <li><a href="./fb"><i class="u-fb"></i><span>副本专题</span><em></em></a></li>
-                     <li><a href="./pet"><i class="u-pet"></i><span>宠物</span><em></em></a></li>
-                    <li><a href="./face"><i class="u-face"></i><span>捏脸数据</span><em class="u-mark-com"></em></a></li>
-                    <!-- <li><a href="./wall"><i class="u-wall"></i><span>壁纸</span><em></em></a></li> -->
-                    <!-- <li><a href="./pvx"><i class="u-pvx"></i><span>休闲攻略</span><em></em></a></li> -->
-                    <li><a href="./team"><i class="u-team"></i><span>团队招募</span><em></em></a></li>
-                    <li><a href="./member"><i class="u-member"></i><span>团员求团</span><em></em></a></li>
-                    <li><a href="./biz-sale"><i class="u-biz-sale"></i><span>出售信息</span><em></em></a></li>
-                    <li><a href="./biz-buy"><i class="u-biz-buy"></i><span>求购信息</span><em></em></a></li>
-                    <li><a href="https://www.j3pz.com/m/" target="_blank"><i class="u-peizhuang"></i><span>配装模拟</span><em></em></a></li>
-                    <li><a href="./app/servers"  target="_blank"><i class="u-servers"></i><span>开服监控</span><em></em></a></li>
-                    <li><a href="https://www.j3pz.com/m/tools.html" target="_blank"><i class="u-speed"></i><span>加速宝典</span><em></em></a></li>
-                    <li><a href="http://www.j3ui.com/wiki" target="_blank"><i class="u-chengjiu"></i><span>成就百科</span><em></em></a></li>
-                    <li><a href="./skin"><i class="u-skin"></i><span>读条皮肤</span><em></em></a></li>
-                    <li><a href="./story"><i class="u-story"></i><span>回忆录</span><em></em></a></li>
-                    <!-- <li><a href="./music"><i class="u-music"></i><span>音乐</span><em></em></a></li> -->
-                    <li><a href="./ow"><i class="u-ow"></i><span>守望屁股</span><em class="u-mark-new"></em></a></li>
-                </ul>
-            </div>
         </div>
 
         <div class="index-sidebar">
 
-            <div class="m-index-os">
+            <div class="m-index-os u-ribbon u-ribbon-green">
                 <a class="u-title" href="">JX3PVE官方工具集</a>
                 <a class="u-desc" href="">立刻下载 v1.0 beta</a>
-                <span class="u-ribbon">
-                    <i class="u-ribbon-bg"></i>
-                    <i class="u-ribbon-txt">BETA</i>
-                </span>
             </div>
 
             <div class="m-index-my">
@@ -84,8 +65,8 @@
             </div>
 
             <div class="m-index-ac">
-                <h2><a class="m-title" href="./forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=24" target="_blank"><i></i>游戏更新</a></h2>
-                <!--{block/1808}-->
+                <h2><a class="m-title" href="http://xw.jx3.xoyo.com/announce/" target="_blank"><i></i>游戏更新</a></h2>
+                <!--{block/1816}-->
             </div>
 
             <div class="m-index-ac">
