--- a/css/index/index-v7/sidebar.less
+++ b/css/index/index-v7/sidebar.less
@@ -1,5 +1,6 @@
 .m-index-os{
 	//border:1px solid #eee;
+	.pr;
 	padding:10px;
 	margin-bottom:20px;
 	border:1px solid darken(@blue-bg,2%);
@@ -15,20 +16,7 @@
 	.u-title{.fz(16px);.color(@blue-link,#c00);}
 	.u-desc{.color(#666,#c00);}
 
-	.u-ribbon-txt('BETA');
-	&:before{
-		.rt(-30px,0);
-		.w(106px);.h(27px);
-	}
-	&:after{
-		.rt(0,8px);
-	}
-}
-.ie8{
-	.u-ribbon-red,.u-ribbon-green,.u-ribbon-orange,.u-ribbon-yellow,.u-ribbon-blue,.u-ribbon-purple{
-		&:before{.rt(0,0);.w(40px);.x;.lh(20px);}
-		&:after{.rt(0,0);}
-	}
+	.none;
 }
 
 .m-index-my{
