--- a/css/module/ui/ui.less
+++ b/css/module/ui/ui.less
@@ -14,6 +14,7 @@
 @import url('role.less');			//门派
 @import url('msg.less');			//跳转消息
 @import url('ribbon.less');			//角标
+@import url('mark.less');			//角标
 
 
 .alertHTML .p_pop{
