--- a/template/default/jx3pve/c_compass.htm
+++ b/template/default/jx3pve/c_compass.htm
@@ -1,26 +1,96 @@
 <div class="c-compass">
     <ul>
-        <li><a href="./bbs" title="交流"><i class="u-bbs"></i><span>交流</span><em></em></a></li>
-        <li><a class="u-ribbon u-ribbon-red" href="./macro" title="宏库"><i class="u-macro"></i><span>宏库</span></a></li>
-        <li><a class="" href="./tool" title="工具"><i class="u-tool"></i><span>工具</span><em></em></a></li>
-        <li><a href="./role" title="职业"><i class="u-role"></i><span>职业</span><em></em></a></li>
-        <li><a class="u-ribbon u-ribbon-red" href="./fam" title="副本"><i class="u-fam"></i><span>副本</span></a></li>
-        <li><a href="./fb" title="副本专题"><i class="u-fb"></i><span>副本专题</span><em></em></a></li>
-        <li><a href="./pet" title="宠物"><i class="u-pet"></i><span>宠物</span><em></em></a></li>
-        <li><a class="" href="./face" title="捏脸"><i class="u-face"></i><span>捏脸数据</span></a></li>
-        <!-- <li><a href="./wall" title="壁纸"><i class="u-wall"></i><span>壁纸</span><em></em></a></li> -->
-        <!-- <li><a href="./pvx" title="休闲攻略"><i class="u-pvx"></i><span>休闲攻略</span><em></em></a></li> -->
-        <li><a href="./team" title="团队招募"><i class="u-team"></i><span>团队招募</span><em></em></a></li>
-        <li><a href="./member" title="团员求职"><i class="u-member"></i><span>团员求职</span><em></em></a></li>
-        <li><a href="./biz-sale" title="出售信息"><i class="u-biz-sale"></i><span>出售信息</span><em></em></a></li>
-        <li><a href="./biz-buy" title="求购信息"><i class="u-biz-buy"></i><span>求购信息</span><em></em></a></li>
-        <li><a href="https://www.j3pz.com/m/" title="配装模拟" target="_blank"><i class="u-peizhuang"></i><span>配装模拟</span><em></em></a></li>
-        <li><a href="./app/servers" title="开服监控"><i class="u-servers"></i><span>开服监控</span><em></em></a></li>
-        <li><a href="https://www.j3pz.com/m/tools.html" title="加速宝典" target="_blank"><i class="u-speed"></i><span>加速宝典</span><em></em></a></li>
-        <li><a href="http://www.j3ui.com/wiki" title="成就百科" target="_blank"><i class="u-chengjiu"></i><span>成就百科</span><em></em></a></li>
-        <li><a href="./skin" title="读条皮肤"><i class="u-skin"></i><span>读条皮肤</span><em></em></a></li>
-        <li><a href="./story" title="回忆录"><i class="u-story"></i><span>回忆录</span><em></em></a></li>
-        <!-- <li><a href="./music" title="音乐"><i class="u-music"></i><span>音乐</span><em></em></a></li> -->
-        <li><a class="u-ribbon u-ribbon-green" href="./ow" title="守望先锋"><i class="u-ow"></i><span>守望屁股</span></a></li>
+        <li><a href="./bbs">
+            <i class="u-bbs"><img src="http://img.jx3pve.com/img/system/sitemap/bbs.png" alt="论坛交流"></i>
+            <span>交流</span><em></em>
+        </a></li>
+        <li><a href="./macro">
+            <i class="u-macro"><img src="http://img.jx3pve.com/img/system/sitemap/macro.png" alt="宏库"></i>
+            <span>宏库</span><em class="i-mark-hot"></em>
+        </a></li>
+        <li><a href="./tool">
+            <i class="u-tool"><img src="http://img.jx3pve.com/img/system/sitemap/tool.png" alt="工具资源"></i>
+            <span>工具</span><em></em>
+        </a></li>
+        <li><a href="./role">
+            <i class="u-role"><img src="http://img.jx3pve.com/img/system/sitemap/role.png" alt="职业攻略"></i>
+            <span>职业</span><em></em>
+        </a></li>
+        <li><a href="./fam">
+            <i class="u-fam"><img src="http://img.jx3pve.com/img/system/sitemap/fam.png" alt="副本攻略"></i>
+            <span>副本</span><em class="i-mark-hot"></em>
+        </a></li>
+        <li><a href="./fb">
+            <i class="u-fb"><img src="http://img.jx3pve.com/img/system/sitemap/fb.png" alt="副本专题"></i>
+            <span>副本专题</span><em></em>
+        </a></li>
+        <li><a href="./pet">
+            <i class="u-pet"><img src="http://img.jx3pve.com/img/system/sitemap/pet.png" alt="宠物"></i>
+            <span>宠物</span><em></em>
+        </a></li>
+        <li><a href="./face">
+            <i class="u-face"><img src="http://img.jx3pve.com/img/system/sitemap/face.png" alt="捏脸数据"></i>
+            <span>捏脸数据</span><em></em>
+        </a></li>
+        <!-- <li><a href="./wall">
+            <i class="u-wall"><img src="http://img.jx3pve.com/img/system/sitemap/wall.png" alt="壁纸"></i>
+            <span>壁纸</span><em></em>
+        </a></li> -->
+        <!-- <li><a href="./emote">
+            <i class="u-emote"><img src="http://img.jx3pve.com/img/system/sitemap/emote.png" alt="表情"></i>
+            <span>表情</span><em></em>
+        </a></li> -->
+        <!-- <li><a href="./pvx">
+            <i class="u-pvx"><img src="http://img.jx3pve.com/img/system/sitemap/pvx.png" alt="休闲攻略"></i>
+            <span>休闲攻略</span><em></em>
+        </a></li> -->
+        <li><a href="./team" >
+            <i class="u-team"><img src="http://img.jx3pve.com/img/system/sitemap/team.png" alt="团队招募"></i>
+            <span>团队招募</span><em></em>
+        </a></li>
+        <li><a href="./member">
+            <i class="u-member"><img src="http://img.jx3pve.com/img/system/sitemap/member.png" alt="团员找团"></i>
+            <span>团员求职</span><em></em>
+        </a></li>
+        <li><a href="./biz-sale">
+            <i class="u-sale"><img src="http://img.jx3pve.com/img/system/sitemap/sale.png" alt="出售信息"></i>
+            <span>出售信息</span><em></em>
+        </a></li>
+        <li><a href="./biz-buy">
+            <i class="u-buy"><img src="http://img.jx3pve.com/img/system/sitemap/buy.png" alt="求购信息"></i>
+            <span>求购信息</span><em></em>
+        </a></li>
+        <li><a href="https://www.j3pz.com/m/" target="_blank">
+            <i class="u-peizhuang"><img src="http://img.jx3pve.com/img/system/sitemap/peizhuang.png" alt="配装模拟"></i>
+            <span>配装模拟</span><em></em>
+        </a></li>
+        <li><a href="./app/servers">
+            <i class="u-servers"><img src="http://img.jx3pve.com/img/system/sitemap/servers.png" alt="开服监控"></i>
+            <span>开服监控</span><em></em>
+        </a></li>
+        <li><a href="https://www.j3pz.com/m/tools.html" target="_blank">
+            <i class="u-speed"><img src="http://img.jx3pve.com/img/system/sitemap/speed.png" alt="加速计算"></i>
+            <span>加速宝典</span><em></em>
+        </a></li>
+        <li><a href="http://www.j3ui.com/wiki" target="_blank">
+            <i class="u-chengjiu"><img src="http://img.jx3pve.com/img/system/sitemap/chengjiu.png" style="left:-5px;width:120%;top:-2px;" alt="成就百科"></i>
+            <span>成就百科</span><em></em>
+        </a></li>
+        <li><a href="./snow">
+            <i class="u-snow"><img src="http://img.jx3pve.com/img/system/sitemap/snow.png" alt="小雪读条皮肤"></i>
+            <span>读条皮肤</span><em></em>
+        </a></li>
+        <li><a href="./story">
+            <i class="u-story"><img src="http://img.jx3pve.com/img/system/sitemap/story.png" alt="回忆录"></i>
+            <span>回忆录</span><em></em>
+        </a></li>
+        <!-- <li><a href="./music">
+            <i class="u-music"><img src="http://img.jx3pve.com/img/system/sitemap/music.png" alt="音乐"></i>
+            <span>音乐</span><em></em>
+        </a></li> -->
+        <li><a href="./ow">
+            <i class="u-ow"><img src="http://img.jx3pve.com/img/system/sitemap/ow.png" alt="守望先锋"></i>
+            <span>守望先锋</span><em></em>
+        </a></li>
     </ul>
 </div>
