--- a/template/yylmacro/portal/index.htm
+++ b/template/yylmacro/portal/index.htm
@@ -1,65 +1,91 @@
 <!--{template common/header_m}-->
-<link rel="stylesheet" href="http://css.jx3pve.com/css/index/index.css" type="text/css" />
+<link rel="stylesheet" href="http://css.jx3pve.com/css/index/index-v7.css" type="text/css" />
 <div class="index-container">
     <div class="wp">
+        
+        <div id="pt" class="bm cl">
+            <div class="z">
+                <a href="./" class="nvhm" title="首页">剑网3PVE官方站（JX3PVE.COM）</a> 
+                <em>›</em> <a href="http://www.jx3pve.com">首页</a>
+            </div>
+            <div class="m-index-msg">
+                <!--{block/1815}-->
+            </div>
+        </div>
+
         <div class="index-content">
-            <div class="m-slider">
+
+            <div class="m-index-slider">
                 <!--{block/1733}-->
             </div>
-            <h3 class="m-title">
-                <span>干货推荐</span>
-                <a class="u-more" href="./news">More</a>
-                <a class="u-add" href="./push"><i></i>推送</a>
-            </h3>
-            <div class="m-news">
-                <!--{block/518}-->
+
+            <div class="m-index-zt">
+                <!--{block/1817}-->
             </div>
-            <h3 class="m-title">
-                <span>最新动态</span>
-            </h3>
-            <div class="m-news">
-                <!--{block/1805}-->
+
+            <!--{template jx3pve/c_compass}-->
+
+            <div class="m-index-news">
+                <h2 class="m-index-title">
+                    <a class="u-title on" href="javascript:;"><i class="u-ico"></i>干货推荐<span class="u-divding"> | </span></a>
+                    <a class="u-title" href="javascript:;">PVE动态<span class="u-divding"> | </span></a>
+                    <a class="u-title" href="javascript:;">PVX动态<span class="u-divding"> | </span></a>
+                    <a class="u-title" href="javascript:;">江湖动态</a>
+                    <a class="u-add" href="./push"><i></i>推送</a>
+                </h2>
+                <div class="m-index-list on">
+                    <!--{block/1805}-->
+                </div>
+                <div class="m-index-list">
+                    <!--{block/1818}-->
+                </div>
+                <div class="m-index-list">
+                    <!--{block/1736}-->
+                </div>
+                <div class="m-index-list">
+                    <!--{block/1737}-->
+                </div>
             </div>
 
         </div>
+
         <div class="index-sidebar">
-            <div class="m-code m-subblock">
-                <span class="u-img"><img src="http://img.jx3pve.com/img/header/wx_129.jpg" alt="剑网3PVE微信公众号"></span>
-                <span>扫一扫关注微信公众号</span>
-                <b>剑网3PVE</b>
+
+            <div class="m-index-os">
+                <a class="u-title" href="">JX3PVE官方工具集</a>
+                <a class="u-desc" href="">立刻下载 v1.0 beta</a>
+                <em class="i-mark-beta"></em>
             </div>
-            
-            <h3 class="m-title">
-                <span>站内更新与公告</span>
-                <a class="u-more" href="forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=24">More</a>
-            </h3>
-            <div class="m-list m-subblock">
+
+            <div class="m-index-my">
+                <ul>
+                    <li><a href="./forum.php?mod=guide&view=my&type=thread" target="_blank"><i class="u-my"></i>我的帖子</a></li>
+                    <li><a href="./home.php?mod=space&do=favorite&view=me" target="_blank"><i class="u-fav"></i>我的收藏</a></li>
+                    <li><a href="./home.php?mod=follow" target="_blank"><i class="u-feed"></i>我的关注</a></li>
+                </ul>
+            </div>
+
+            <div class="m-index-ac">
+                <h2><a class="m-title" href="http://xw.jx3.xoyo.com/announce/" target="_blank"><i></i>游戏更新</a></h2>
+                <!--{block/1816}-->
+            </div>
+
+            <div class="m-index-ac">
+                <h2><a class="m-title" href="./forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=24" target="_blank"><i></i>站内更新</a></h2>
                 <!--{block/1808}-->
             </div>
 
-            <h3 class="m-title">
-                <span>每日一曲</span>
-                <span class="u-history">
-                    <a href="http://music.163.com/#/playlist?id=376516027" target="_blank">站长推荐</a> | 
-                    <a href="http://music.163.com/#/playlist?id=376487170" target="_blank">古风</a>
-                </span>
-            </h3>
-            <div class="m-music m-subblock" style="margin-bottom:2px;">
-                <!--{block/1803}-->
-                <p class="m-music-tips"><!--{block/1810}--></p>
-            </div>
-
-            <h3 class="m-title">
-                <span>赞助合作推广</span>
-                <a class="u-history" href="http://sighttp.qq.com/authd?IDKEY=f11d134259f732568faaf427d33ff5c5809162f66277a06e" target="_blank">Join</a>
-            </h3>
-            <div class="m-ad m-subblock">
-                <!--{block/1811}-->
+            <div class="m-index-wxcode">
+                <span class="u-img"><img src="http://img.jx3pve.com/img/header/wx_172.jpg" alt="剑网3PVE微信公众号"></span>
+                <p>扫一扫关注微信公众号<br><b>剑网3PVE</b></p>
             </div>
 
         </div>
     </div>
 </div>
+
+
+
 <script src="http://js.jx3pve.com/js/plugin/swiper2.min.js"></script>
 <script src="http://js.jx3pve.com/js/page/page-index.js"></script>
 <!--{template common/footer}-->
