--- a/template/yylmacro/portal/portal_topic_test.htm
+++ b/template/yylmacro/portal/portal_topic_test.htm
@@ -51,9 +51,10 @@
 
         <div class="index-sidebar">
 
-            <div class="m-index-os u-ribbon u-ribbon-green">
+            <div class="m-index-os">
                 <a class="u-title" href="">JX3PVE官方工具集</a>
                 <a class="u-desc" href="">立刻下载 v1.0 beta</a>
+                <em class="i-mark-beta"></em>
             </div>
 
             <div class="m-index-my">
