Signed-off-by: iRuxu <17229398@qq.com>

--- a/css/index/index-v7/content.less
+++ b/css/index/index-v7/content.less
@@ -125,7 +125,7 @@
 			background-color:#f7f7f7;
 			padding:0 5px;
 			.lh(22px);
-			margin-top:3px;
+			margin:(32px - 22px)/2 0;
 			.r(2px);
 			margin-right:10px;
 			color:#777;
