首页移除副本专题，增加更多，宏库移除侧边固定效果

--- a/css/system/sitemap.less
+++ b/css/system/sitemap.less
@@ -8,6 +8,11 @@
 	#pt{margin-bottom:10px;}
 }
 
+.m-sitemap-compass{
+	.u-more{
+		.none;
+	}
+}
 .m-sitemap-more{
 	border-top:1px dashed #ddd;
 	padding-top:20px;
@@ -45,7 +50,7 @@
 		.dbi;
 		color:#999;
 		padding:0 2px;
-		transform:scale(0.8);
+		//transform:scale(0.8);
 	}
 }
 
