--- a/template/about/portal/portal_topic_sitemap.htm
+++ b/template/about/portal/portal_topic_sitemap.htm
@@ -13,12 +13,15 @@
 			</div>
 		</div>
 
-		<!--{subtemplate jx3pve/c_compass}-->
+		<div class="m-sitemap-compass">
+			<!--{subtemplate jx3pve/c_compass}-->
+		</div>
 
 		<div class="m-sitemap-more">
 			<div class="m-sitemap-block m-sitemap-about">
-				<h2>下架栏目</h2>
+				<h2>其它栏目</h2>
 				<ul>
+					<li><a href="./fb">副本专题<em>(已停更)</em></a></li>
 					<li><a href="./cloud">超级宏官网<em>(已和谐)</em></a></li>
 					<li><a href="./forum.php?mod=forumdisplay&fid=85">超级宏论坛<em>(已和谐)</em></a></li>
 					<li><a href="./group.php">群组<em>(私版)</em></a></li>
