--- a/template/macro/forum/custom_footer.htm
+++ b/template/macro/forum/custom_footer.htm
@@ -1,2 +1,2 @@
-<script src="http://js.jx3pve.com/js/widget/fixSidebar.min.js"></script>
+<!-- <script src="http://js.jx3pve.com/js/widget/fixSidebar.min.js"></script> -->
 <script src="http://js.jx3pve.com/js/pve/pve-macro.min.js"></script>
