--- a/template/default/jx3pve/c_compass.htm
+++ b/template/default/jx3pve/c_compass.htm
@@ -20,10 +20,6 @@
             <i class="u-fam"><img src="http://img.jx3pve.com/img/system/sitemap/fam.png" alt="副本攻略"></i>
             <span>副本</span><em class="i-mark-hot"></em>
         </a></li>
-        <li><a href="./fb">
-            <i class="u-fb"><img src="http://img.jx3pve.com/img/system/sitemap/fb.png" alt="副本专题"></i>
-            <span>副本专题</span><em></em>
-        </a></li>
         <li><a href="./pet">
             <i class="u-pet"><img src="http://img.jx3pve.com/img/system/sitemap/pet.png" alt="宠物"></i>
             <span>宠物</span><em></em>
@@ -35,12 +31,12 @@
         <!-- <li><a href="./wall">
             <i class="u-wall"><img src="http://img.jx3pve.com/img/system/sitemap/wall.png" alt="壁纸"></i>
             <span>壁纸</span><em></em>
-        </a></li> -->
-        <!-- <li><a href="./emote">
+        </a></li>
+        <li><a href="./emote">
             <i class="u-emote"><img src="http://img.jx3pve.com/img/system/sitemap/emote.png" alt="表情"></i>
             <span>表情</span><em></em>
-        </a></li> -->
-        <!-- <li><a href="./pvx">
+        </a></li>
+        <li><a href="./pvx">
             <i class="u-pvx"><img src="http://img.jx3pve.com/img/system/sitemap/pvx.png" alt="休闲攻略"></i>
             <span>休闲攻略</span><em></em>
         </a></li> -->
@@ -91,6 +87,9 @@
         <li><a href="./ow">
             <i class="u-ow"><img src="http://img.jx3pve.com/img/system/sitemap/ow.png" alt="守望先锋"></i>
             <span>守望先锋</span><em></em>
+        </a></li>
+        <li class="u-more"><a href="./sitemap">
+            <i class="u-sitemap"><img src="http://img.jx3pve.com/img/system/sitemap/more.png" alt="更多"></i>
         </a></li>
     </ul>
 </div>
