关于修复与调整、副本栏目调整、站外工具修复、底部调整、工具集模块后台模块化

--- a/css/system/about/join.less
+++ b/css/system/about/join.less
@@ -18,11 +18,11 @@
 	.default{
 		.lh(40px);
 		*{
-			.db;.fl;.w(18%);
+			.db;.fl;.w(20%);
 			.indent(10px);
 		}
 		.email{
-			.w(28%);
+			//.w(28%);
 		}
 	}
 	.th{
@@ -55,11 +55,14 @@
 }
 .ua-responsive .screen-s{
 	.m-about-join .default{
-		.role{.w(40%);}
-		.email{.w(40%);}
-		.go{.w(20%);}
+		.role{.w(30%);}
+		.email{.w(30%);}
+		.go{.w(40%);}
 		.channel,.date{
 			.none;
 		}
 	}
+}
+.ua-responsive .screen-s.sort-26{
+	.wp{padding:0;}
 }
