--- a/template/default/jx3pve/c_compass.htm
+++ b/template/default/jx3pve/c_compass.htm
@@ -56,7 +56,7 @@
             <i class="u-buy"><img src="http://img.jx3pve.com/img/system/sitemap/buy.png" alt="求购信息"></i>
             <span>求购信息</span><em></em>
         </a></li>
-        <li><a href="https://www.j3pz.com/m/" target="_blank">
+        <li><a href="https://www.j3pz.com/" target="_blank">
             <i class="u-peizhuang"><img src="http://img.jx3pve.com/img/system/sitemap/peizhuang.png" alt="配装模拟"></i>
             <span>配装模拟</span><em></em>
         </a></li>
@@ -64,7 +64,7 @@
             <i class="u-servers"><img src="http://img.jx3pve.com/img/system/sitemap/servers.png" alt="开服监控"></i>
             <span>开服监控</span><em></em>
         </a></li>
-        <li><a href="https://www.j3pz.com/m/tools.html" target="_blank">
+        <li><a href="https://www.j3pz.com/tools/haste/" target="_blank">
             <i class="u-speed"><img src="http://img.jx3pve.com/img/system/sitemap/speed.png" alt="加速计算"></i>
             <span>加速宝典</span><em></em>
         </a></li>
