--- a/template/yylmacro/portal/index.htm
+++ b/template/yylmacro/portal/index.htm
@@ -52,9 +52,7 @@
         <div class="index-sidebar">
 
             <div class="m-index-os">
-                <a class="u-title" href="">JX3PVE官方工具集</a>
-                <a class="u-desc" href="">立刻下载 v1.0 beta</a>
-                <em class="i-mark-beta"></em>
+                <!--{block/1819}-->
             </div>
 
             <div class="m-index-my">
