--- a/template/default/common/footer_common.htm
+++ b/template/default/common/footer_common.htm
@@ -26,22 +26,24 @@
 			<a href="./forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=24">更新日志</a>
 			<a href="./portal.php?mod=topic&topicid=113">版权声明</a>
 			<a href="./portal.php?mod=topic&topicid=114">免责声明</a>
-			<a href="./portal.php?mod=topic&topicid=115">友情链接</a>
 			<a href="./forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=26">加入我们</a>
+			<a href="./portal.php?mod=topic&topicid=115">友情链接</a>
 			<a href="./portal.php?mod=topic&topicid=65">合作联系</a>
 		</div>
 
 		<div class="c-footer-official">
-			官方微信公众号：<span class="wx">剑网3PVE<i class="wxcode_small"></i><i class="wxcode"></i></span> |
-			官方微博：<a href="http://weibo.com/jx3pve" target="_blank">@剑网3精品资料站</a>
-		</div>
-
-		<div class="c-footer-gov">
-			<a href="http://jx3.xoyo.com/" target="_blank">剑侠情缘网络版叁</a>  | 
+			官方微信公众号：<span class="wx">剑网3PVE<i class="wxcode_small"></i><i class="wxcode"></i></span> | 
 			<!--{if $_G['setting']['icp']}-->
 				<a href="http://www.miitbeian.gov.cn/" target="_blank">$_G['setting']['icp']</a>
 			<!--{/if}-->
+			<!--  |
+			官方微博：<a href="http://weibo.com/jx3pve" target="_blank">@剑网3精品资料站</a> -->
 		</div>
+
+		<!-- <div class="c-footer-gov">
+			<a href="http://jx3.xoyo.com/" target="_blank">剑侠情缘网络版叁</a>  | 
+			
+		</div> -->
 
 		<div class="c-footer-copyright">
 			&copy; 2012-2016 <a href="$_G['setting']['siteurl']">$_G['setting']['sitename']</a> All rights reserved.
