--- a/template/tool/forum/bak/sidebar.htm
+++ b/template/tool/forum/bak/sidebar.htm
@@ -42,7 +42,7 @@
 		    <input type="text" name="searchoption[41][value]" size="15" class="u-text" value="">
 		    <button type="submit" class="u-button-search u-button" name="searchsortsubmit"><em>搜索</em></button>
 		</form>
-	    <a class="getanew" href="./feedback" target="_blank"><i></i>没找到想要的？试试来提需求。</a>
+	    <a class="getanew" href="./thread-10895-1-1.html" target="_blank"><i></i>没找到想要的？试试来提需求。</a>
 	</div>
 
 	<h2 class="default-sidebar-title">在线应用<a class="u-more" href="./app" data-target="blank" title="查看更多">更多应用</a></h2>
