Signed-off-by: iRuxu <17229398@qq.com>

--- a/css/system/404.less
+++ b/css/system/404.less
@@ -1,6 +1,6 @@
 @import url("../public/reset.less");	//重置
 @import url('../public/base.less');		//函数
-@import url('../public/path.less');		//路径
+@import url('../global/var.less');		//路径
 
 
 @keyframes goUp{
@@ -70,7 +70,7 @@
 
 .error-main{
 	.x;
-	background:url("http://ww4.sinaimg.cn/large/bcc700eegw1eikbevbsu1j21hc0ip4cf.jpg") no-repeat 0 0;
+	background:url("http://ww4.sinaimg.cn/large/bcc700eegw1eikbevbsu1j21hc0ip4cf.jpg") no-repeat center 0;
 }
 
 .error-content{
