Signed-off-by: unknown <17229398@qq.com>

--- a/template/macro/forum/sidebar.htm
+++ b/template/macro/forum/sidebar.htm
@@ -126,7 +126,7 @@
 		</tr>
 		<tr>
 		<td>rage</td>
-		<td>藏剑剑气(0~10)、霸刀长刀</td>
+		<td>藏剑剑气(0~10)、霸刀长刀(尘身体态)</td>
 		</tr>
 		<tr>
 		<td>qidian</td>
@@ -134,11 +134,11 @@
 		</tr>
 		<tr>
 		<td>energy</td>
-		<td>唐门能量值、霸刀双刀</td>
+		<td>唐门能量值、霸刀双刀(竹雾体态)</td>
 		</tr>
 		<tr>
 		<td>sun</td>
-		<td>明教日灵值、霸刀鞘刀</td>
+		<td>明教日灵值、霸刀鞘刀(金屏体态)</td>
 		</tr>
 		<tr>
 		<td>moon</td>
