捏脸栏目增加在线数据清洗

--- a/css/module/ui/mark.less
+++ b/css/module/ui/mark.less
@@ -22,6 +22,10 @@
 	&:extend(.i-mark);
 	background-image:url('@{url}index/mark-beta.png');
 }
+.i-mark-new{
+	&:extend(.i-mark);
+	background-image:url('@{url}index/mark-new2.png');
+}
 
 .i-mark-blue{
 	&:extend(.i-mark);
