--- a/css/pvx/pvx-face.less
+++ b/css/pvx/pvx-face.less
@@ -2,8 +2,10 @@
 @import url('../global/var.less');			//常量
 @import url('../global/color.less');		//配色
 @import url('../module/ui/tips.less');		
+@import url('../module/ui/button.less');		
 
 @import url('face/layout.less');
 @import url('face/sidebar.less');
 @import url('face/list.less');
 @import url('face/view.less');
+@import url('face/faceclear.less');
