--- a/template/default/jx3pve/c_compass.htm
+++ b/template/default/jx3pve/c_compass.htm
@@ -20,13 +20,13 @@
             <i class="u-fam"><img src="http://img.jx3pve.com/img/system/sitemap/fam.png" alt="副本攻略"></i>
             <span>副本</span><em class="i-mark-hot"></em>
         </a></li>
+        <li><a href="./face">
+            <i class="u-face"><img src="http://img.jx3pve.com/img/system/sitemap/face.png" alt="捏脸数据"></i>
+            <span>捏脸</span><em class="i-mark-new"></em>
+        </a></li>
         <li><a href="./pet">
             <i class="u-pet"><img src="http://img.jx3pve.com/img/system/sitemap/pet.png" alt="宠物"></i>
             <span>宠物</span><em></em>
-        </a></li>
-        <li><a href="./face">
-            <i class="u-face"><img src="http://img.jx3pve.com/img/system/sitemap/face.png" alt="捏脸数据"></i>
-            <span>捏脸数据</span><em></em>
         </a></li>
         <!-- <li><a href="./wall">
             <i class="u-wall"><img src="http://img.jx3pve.com/img/system/sitemap/wall.png" alt="壁纸"></i>
@@ -42,39 +42,39 @@
         </a></li> -->
         <li><a href="./team" >
             <i class="u-team"><img src="http://img.jx3pve.com/img/system/sitemap/team.png" alt="团队招募"></i>
-            <span>团队招募</span><em></em>
+            <span>招募</span><em></em>
         </a></li>
         <li><a href="./member">
             <i class="u-member"><img src="http://img.jx3pve.com/img/system/sitemap/member.png" alt="团员找团"></i>
-            <span>团员求职</span><em></em>
+            <span>找团</span><em></em>
         </a></li>
         <li><a href="./biz-sale">
             <i class="u-sale"><img src="http://img.jx3pve.com/img/system/sitemap/sale.png" alt="出售信息"></i>
-            <span>出售信息</span><em></em>
+            <span>出售</span><em></em>
         </a></li>
         <li><a href="./biz-buy">
             <i class="u-buy"><img src="http://img.jx3pve.com/img/system/sitemap/buy.png" alt="求购信息"></i>
-            <span>求购信息</span><em></em>
+            <span>求购</span><em></em>
         </a></li>
         <li><a href="https://www.j3pz.com/" target="_blank">
             <i class="u-peizhuang"><img src="http://img.jx3pve.com/img/system/sitemap/peizhuang.png" alt="配装模拟"></i>
-            <span>配装模拟</span><em></em>
+            <span>配装</span><em></em>
         </a></li>
         <li><a href="./app/servers">
             <i class="u-servers"><img src="http://img.jx3pve.com/img/system/sitemap/servers.png" alt="开服监控"></i>
-            <span>开服监控</span><em></em>
+            <span>开服</span><em></em>
         </a></li>
         <li><a href="https://www.j3pz.com/tools/haste/" target="_blank">
             <i class="u-speed"><img src="http://img.jx3pve.com/img/system/sitemap/speed.png" alt="加速计算"></i>
-            <span>加速宝典</span><em></em>
+            <span>急速</span><em></em>
         </a></li>
         <li><a href="http://www.j3ui.com/wiki" target="_blank">
             <i class="u-chengjiu"><img src="http://img.jx3pve.com/img/system/sitemap/chengjiu.png" style="left:-5px;width:120%;top:-2px;" alt="成就百科"></i>
-            <span>成就百科</span><em></em>
+            <span>成就</span><em></em>
         </a></li>
         <li><a href="./snow">
             <i class="u-snow"><img src="http://img.jx3pve.com/img/system/sitemap/snow.png" alt="小雪读条皮肤"></i>
-            <span>读条皮肤</span><em></em>
+            <span>读条</span><em></em>
         </a></li>
         <li><a href="./story">
             <i class="u-story"><img src="http://img.jx3pve.com/img/system/sitemap/story.png" alt="回忆录"></i>
@@ -86,7 +86,7 @@
         </a></li> -->
         <li><a href="./ow">
             <i class="u-ow"><img src="http://img.jx3pve.com/img/system/sitemap/ow.png" alt="守望先锋"></i>
-            <span>守望先锋</span><em></em>
+            <span>开车</span><em></em>
         </a></li>
         <li class="u-more"><a href="./sitemap">
             <i class="u-sitemap"><img src="http://img.jx3pve.com/img/system/sitemap/more.png" alt="更多"></i>
