--- a/template/face/tpl/view.hbs
+++ b/template/face/tpl/view.hbs
@@ -4,21 +4,24 @@
 			<span class="img u-imgorigin" title="点击查看原图"><img src="{faceshot_value}" alt=""></span>
 		</div>
 		<div class="m-info">
-			<div class="m-details">
-				<p class="item u-author"><em>脸型作者：</em><span><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=92&filter=sortid&sortid=15&searchoption%5B101%5D%5Bvalue%5D={faceauthor_value}">{faceauthor_value}</a></span></p>
-				<p class="item u-wb"><em>作者微博：</em>
-					<em class="w-weibo" id="w-weibo">{author_wb_value}</em>
-					<span class="w-weibo-win" id="w-weibo-win"><wb:follow-button uid="{author_wb_value}" type="red_1" width="67" height="24" ></wb:follow-button></span>
-				</p>
+			<div class="m-info-inner">
+				<div class="m-details">
+					<p class="item u-author"><em>脸型作者：</em><span><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=92&filter=sortid&sortid=15&searchoption%5B101%5D%5Bvalue%5D={faceauthor_value}">{faceauthor_value}</a></span></p>
+					<p class="item u-wb"><em>作者微博：</em>
+						<em class="w-weibo" id="w-weibo">{author_wb_value}</em>
+						<span class="w-weibo-win" id="w-weibo-win"><wb:follow-button uid="{author_wb_value}" type="red_1" width="67" height="24" ></wb:follow-button></span>
+					</p>
+					<p class="item u-price"><em>收费零件：</em><span id="u-face-isprice">{face_price_value}</span><a class="u-report" href="javascript:;" onclick="showWindow('miscreport', 'misc.php?mod=report&url='+REPORTURL);return false;" title="报错或举报"><i></i>报错提交</a></p>
+				</div>
+				<div class="m-down">
+					<a class="u-btn-facedown" href="{facedown_value}">点击下载</a>
+					<span class="counts"><em>累计下载次数：</em><span>{facedown_downloads}</span></span>
+				</div>
 			</div>
-			<div class="m-price">
-				<p class="item u-price"><em>收费零件：</em><span>{face_price_value}</span></p>
-				<p class="item u-tips">小提示：数据如无法导入或提示非法数据，则很可能是因为含有商城收费零件。</p>
-			</div>
-			<div class="m-down">
-				<a class="u-btn-facedown" href="{facedown_value}">点击下载</a>
-				<span class="counts"><em>累计下载次数：</em><span>{facedown_downloads}</span></span>
-				<a class="tips" href="javascript:;" onclick="showWindow('miscreport', 'misc.php?mod=report&url='+REPORTURL);return false;"><i></i>无法下载或使用？<b>点击提交</b></a>
+			<div class="m-clean">
+				<h4 class="m-clean-title">脸型数据清洗</h4>
+				<p class="m-clean-desc">如该脸型包含收费零件,可以清洗后再导入,不会因非法数据而无法导入.</p>
+				<iframe src="http://www.jx3pve.com/jx3pveos/facedata/faceclear.php" frameborder="0" width="360px" height="180px"></iframe>
 			</div>
 		</div>
 	</div>
