个人中心样式调整1

--- a/css/user/credit/buy.less
+++ b/css/user/credit/buy.less
@@ -94,6 +94,12 @@
 	}
 }
 .ua-responsive .screen-s{
+	.m-block{
+		margin:0 10px 10px 10px;
+	}
+	.m-credit-primary{
+		padding:0 10px;
+	}
 	.buy-pc-primary .tobuy-custom{
 		.w(100%);
 		box-sizing:border-box;
