--- a/css/user/credit/vip.less
+++ b/css/user/credit/vip.less
@@ -44,4 +44,10 @@
 	.m-credit-primary .m-msg-true{
 		.ps;margin-left:0;
 	}
+	.m-block{
+		margin:0 10px 10px 10px;
+	}
+	.m-credit-primary{
+		padding:0 10px;
+	}
 }
