--- a/template/yylmacro/home/首页/os_header.htm
+++ b/template/yylmacro/home/首页/os_header.htm
@@ -15,13 +15,13 @@
 		 				<!--{else}-->
 		 					<a href="./vip" class="e-vip e-vip-false"></a>
 		 				<!--{/if}-->
+		 				<a class="u-group" href="./home.php?mod=spacecp&ac=usergroup">$_G[group][grouptitle]</a>
 		 				<a class="u-logout" href="member.php?mod=logging&action=logout&formhash={FORMHASH}">{lang logout}</a>
 		 			</div>
 		 			<div class="u-meta-2">
 		 				<span class="u-uid">
 			 				UID:<b>$_G[uid]</b>
 			 			</span>
-		 				<a class="u-group" href="./home.php?mod=spacecp&ac=usergroup">$_G[group][grouptitle]</a>
 		 				<span class="u-verif">
 		 					<!--{if $_G['setting']['verify']['enabled']}-->
 								<!--{loop $_G['setting']['verify'] $vid $verify}-->
@@ -88,7 +88,7 @@
 			</li>
 		</ul>
 		<p class="u-credit-extend">
-			<a class="u-gift" href="javascript:;" title="即将开放">积分兑换</a>
+			<a class="u-viplink" href="./vip">开通/续费会员</a>
 			<a class="u-code" href="./home.php?mod=spacecp&ac=invite">邀请码</a>
 		</p>
 	</div>
